--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postinstall": "jetify"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.6",
     "expo": "~36.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -15,12 +16,16 @@
     "react-native-gesture-handler": "^1.5.6",
     "react-native-maps": "^0.26.1",
     "react-native-reanimated": "^1.4.0",
+    "react-native-safe-area-context": "^0.7.2",
+    "react-native-safe-area-view": "^1.0.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-splash-screen": "^3.2.0",
     "react-native-unimodules": "~0.7.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.1.1",
-    "react-navigation-stack": "^2.1.0"
+    "react-navigation-stack": "^2.1.1",
+    "react-navigation-tabs": "^2.7.0",
+    "undefined": "react-native-community/masked-view"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
