--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,6 +4,8 @@ require_relative '../node_modules/react-native-unimodules/cocoapods'
 
 target 'honoursdProjectReact' do
 
+  rn_path = '../node_modules/react-native'
+  rn_maps_path = '../node_modules/react-native-maps'
   rnPrefix = "../node_modules/react-native"
   
   # React Native and its dependencies
@@ -35,6 +37,7 @@ target 'honoursdProjectReact' do
   pod 'DoubleConversion', :podspec => "#{rnPrefix}/third-party-podspecs/DoubleConversion.podspec"
   pod 'glog', :podspec => "#{rnPrefix}/third-party-podspecs/glog.podspec"
   pod 'Folly', :podspec => "#{rnPrefix}/third-party-podspecs/Folly.podspec"
+  pod 'react-native-maps', path: rn_maps_path
 
   # Other native modules
   pod 'RNGestureHandler', :podspec => '../node_modules/react-native-gesture-handler/RNGestureHandler.podspec'
@@ -43,4 +46,14 @@ target 'honoursdProjectReact' do
 
   # Automatically detect installed unimodules
   use_unimodules!
+end
+
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    if target.name == 'react-native-google-maps'
+      target.build_configurations.each do |config|
+        config.build_settings['CLANG_ENABLE_MODULES'] = 'No'
+      end
+    end
+  end
 end
