--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postinstall": "jetify"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.6",
     "expo": "~36.0.0",
     "react": "~16.9.0",
