--- a/app.json
+++ b/app.json
@@ -24,6 +24,8 @@
       "**/*"
     ],
     "ios": {
+      "bundleIdentifier": "com.callum.honoursprojectreact",
+      "buildNumber": "0.9.0",
       "supportsTablet": true
     },
     "entryPoint": "node_modules/expo/AppEntry.js"
