--- a/package.json
+++ b/package.json
@@ -4,41 +4,42 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "web": "expo start --web",
-    "postinstall": "jetify"
+    "postinstall": "jetify && jetify"
   },
   "dependencies": {
     "@react-native-community/geolocation": "^2.0.2",
-    "@react-native-community/masked-view": "^0.1.6",
-    "expo": "~36.0.0",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "~0.61.4",
+    "@react-native-community/masked-view": "0.1.5",
+    "@react-native-mapbox-gl/maps": "^7.2.0",
+    "expo": "^36.0.0",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-native": "0.61.4",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "^1.5.6",
-    "react-native-maps": "^0.26.1",
-    "react-native-reanimated": "^1.4.0",
-    "react-native-safe-area-context": "^0.7.2",
+    "react-native-gesture-handler": "~1.5.0",
+    "react-native-maps": "0.26.1",
+    "react-native-maps-directions": "^1.7.3",
+    "react-native-reanimated": "~1.4.0",
+    "react-native-safe-area-context": "^0.7.3",
     "react-native-safe-area-view": "^1.0.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-splash-screen": "^3.2.0",
-    "react-native-unimodules": "~0.7.0",
-    "react-native-web": "~0.11.7",
-    "react-navigation": "^4.1.1",
-    "react-navigation-stack": "^2.1.1",
-    "react-navigation-tabs": "^2.7.0",
-    "undefined": "react-native-community/masked-view"
+    "react-native-unimodules": "0.7.0",
+    "react-native-web": "^0.11.7",
+    "react-navigation": "^4.2.1",
+    "react-navigation-stack": "^2.2.1",
+    "react-navigation-tabs": "^2.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-native": "^0.60.15",
     "babel-jest": "~24.9.0",
+    "babel-preset-expo": "^8.0.0",
     "jest": "~24.9.0",
     "jetifier": "~1.6.4",
     "metro-react-native-babel-preset": "~0.56.0",
     "react-test-renderer": "~16.9.0",
-    "@types/react": "~16.9.0",
-    "@types/react-native": "~0.60.23",
-    "babel-preset-expo": "~8.0.0",
-    "typescript": "~3.6.3"
+    "typescript": "^3.7.2"
   },
   "private": true
 }
