--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "react-native-maps": "0.26.1",
     "react-native-maps-directions": "^1.7.3",
     "react-native-reanimated": "~1.4.0",
+    "react-native-render-html": "^4.2.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-safe-area-view": "^1.0.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-splash-screen": "^3.2.0",
     "react-native-unimodules": "0.7.0",
     "react-native-web": "^0.11.7",
+    "react-native-webview": "^8.1.2",
     "react-navigation": "^4.2.1",
     "react-navigation-stack": "^2.2.1",
     "react-navigation-tabs": "^2.8.1"
